<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_outlined"
        android:title="@string/menu_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_subscriptions"
        android:icon="@drawable/ic_card_outlined"
        android:title="@string/title_fixed_costs"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_stats_outlined"
        android:title="@string/menu_stats"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_language_en"
        android:title="@string/menu_lang_en"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language_pl"
        android:title="@string/menu_lang_pl"
        app:showAsAction="never" />

</menu>